--- a/style.css
+++ b/style.css
@@ -1,37 +1,36 @@
-* { 
+* {
   margin: 0;
-  padding: 0;  
+  padding: 0;
   box-sizing: border-box;
   text-decoration: none;
   border: none;
   outline: none;
   scroll-behavior: smooth;
 
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 :root {
-  --bg-color:#25283b; 
+  --bg-color: #25283b;
   --second-bg-color: #323946;
   --text-color: #fff;
   --main-color: rgb(6, 200, 235);
-} 
+}
 
 html {
-  font-size: 62,5%;
+  font-size: 62, 5%;
   overflow-x: hidden;
 }
 
 body {
   background: var(--bg-color);
-  color: var(--text-color)
-
+  color: var(--text-color);
 }
 
 section {
- min-height: 100vh;
- padding: 10rem 9% 2rem;
- color: var(--text-color);
+  min-height: 100vh;
+  padding: 10rem 9% 2rem;
+  color: var(--text-color);
 }
 
 .header {
@@ -51,7 +50,7 @@ section {
 }
 
 .header.sticky {
-  border-bottom: .1rem solid rgba(0, 0, 0, .2);
+  border-bottom: 0.1rem solid rgba(0, 0, 0, 0.2);
 }
 
 .logo {
@@ -66,7 +65,7 @@ section {
   color: var(--text-color);
   margin-left: 4rem;
 
-  transition: .3s;
+  transition: 0.3s;
 }
 
 .navbar a:hover,
@@ -108,7 +107,6 @@ section {
   }
 }
 
-
 .home-content h3 {
   font-size: 2rem;
   font-weight: 400;
@@ -140,12 +138,12 @@ span {
   width: 4rem;
   height: 4rem;
   background: transparent;
-  border: .2rem solid var(--main-color);
+  border: 0.2rem solid var(--main-color);
   border-radius: 50%;
   font-size: 2rem;
   color: var(--main-color);
   margin: 3rem 1.5rem 3rem 0;
-  transition:  .5s ease;
+  transition: 0.5s ease;
 }
 
 .social-media a:hover {
@@ -159,12 +157,12 @@ span {
   padding: 1rem 2.8rem;
   background: var(--main-color);
   border-radius: 4rem;
-  box-shadow: 0 0 .6rem var(--main-color);
+  box-shadow: 0 0 0.6rem var(--main-color);
   font-size: 1rem;
   color: black;
-  letter-spacing: .1rem;
+  letter-spacing: 0.1rem;
   font-weight: 400;
-  transition: .5s ease;
+  transition: 0.5s ease;
 }
 
 .btn:hover {
@@ -204,7 +202,7 @@ span {
 
 .about-content p {
   font-size: 1.3rem;
-  margin: 1.5rem 0 2rem; 
+  margin: 1.5rem 0 2rem;
 }
 
 .services h2 {
@@ -225,16 +223,14 @@ span {
   padding: 3rem 2rem 4rem;
   border-radius: 2rem;
   text-align: center;
-  border: .2rem solid var(--bg-color);
-  transition: .5s ease;
+  border: 0.2rem solid var(--bg-color);
+  transition: 0.5s ease;
 }
 
 .services-container .services-box:hover {
   border-color: var(--main-color);
   transform: scale(1.02);
 }
-
-
 
 .services-box i {
   font-size: 3.5rem;
@@ -275,7 +271,7 @@ span {
 
 .portfolio-box img {
   width: 100%;
-  transition: .5s ease;
+  transition: 0.5s ease;
 }
 
 .portfolio-box:hover img {
@@ -288,7 +284,7 @@ span {
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(rgba(0, 0, 0, .1), var(--main-color));
+  background: linear-gradient(rgba(0, 0, 0, 0.1), var(--main-color));
   display: flex;
   justify-content: center;
   align-items: center;
@@ -296,7 +292,7 @@ span {
   text-align: center;
   padding: 0 4rem;
   transform: translateY(100%);
-  transition: .5s ease;
+  transition: 0.5s ease;
 }
 
 .portfolio-box:hover .portfolio-layer {
@@ -309,7 +305,7 @@ span {
 
 .portfolio-layer p {
   font-size: 1rem;
-  margin:  .3rem 0 1rem;
+  margin: 0.3rem 0 1rem;
 }
 
 .portfolio-layer a {
@@ -351,8 +347,8 @@ span {
   font-size: 1.1rem;
   color: var(--text-color);
   background: var(--second-bg-color);
-  border-radius: .8rem;
-  margin: .7rem 0;
+  border-radius: 0.8rem;
+  margin: 0.7rem 0;
 }
 
 .contact form .input-box input {
@@ -378,21 +374,21 @@ span {
 }
 
 .footer-text p {
-  font-size: .8rem;
+  font-size: 0.8rem;
 }
 
 .footer-iconTop a {
   display: inline-flex;
   justify-content: center;
   align-items: center;
-  padding: .8rem;
+  padding: 0.8rem;
   background: var(--main-color);
-  border-radius: .8rem;
-  transition: .5 ease;
+  border-radius: 0.8rem;
+  transition: 0.5 ease;
 }
 
 .footer-iconTop a:hover {
-  box-shadow:  0 0 1rem var(--main-color);  
+  box-shadow: 0 0 1rem var(--main-color);
 }
 
 .footer-iconTop a i {
@@ -421,7 +417,7 @@ span {
   }
 
   .portfolio {
-    padding-bottom:7rem;
+    padding-bottom: 7rem;
   }
 
   .contact {
@@ -445,8 +441,8 @@ span {
     width: 100%;
     padding: 1rem 3%;
     background: var(--bg-color);
-    border-top: .1rem solid rgba(0, 0, 0, .2);
-    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .2);
+    border-top: 0.1rem solid rgba(0, 0, 0, 0.2);
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
     display: none;
   }
 
@@ -475,7 +471,6 @@ span {
   .home-img img {
     width: 70vw;
     margin-top: 4rem;
-  
   }
 
   .about {
